# Mindless

./: .gitignore  DIARY.md  Pipfile  README.md
app/: .gitignore  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/debug/: AndroidManifest.xml
app/android/app/src/main/: AndroidManifest.xml
app/lib/: home.dart  main.dart  mindless.dart  server.dart
app/lib/account/: account.dart
app/lib/login/: colors.dart  form_field.dart  login.dart  registration.dart
app/lib/model/: app_state.dart  database_repository.dart  instance.dart  task.dart  task_respository.dart  user.dart  user_state.dart
app/lib/tasks/: search_page.dart  task_current.dart  task_row_item.dart  task_tab_page.dart
appv2/: .packages  pubspec.yaml
appv2/.dart_tool/: package_config.json
appv2/.dart_tool/flutter_build/6f6b113f0604523de8fc285cf7796aac/: .filecache  debug_android_application.stamp  flutter_assets.d  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json
appv2/android/app/: build.gradle
appv2/android/app/src/main/: AndroidManifest.xml
appv2/android/app/src/main/res/values/: strings.xml
appv2/ios/Flutter/: flutter_export_environment.sh
appv2/lib/: app.dart  home.dart  login.dart  main.dart
appv2/lib/supplemental/: product_columns.dart
hooks/: pre-commit  pre-commit_database.sh  validate_schema.sh
notes/: Diary.md  Flutter.md  Setup.md  index.md
notes/diary/: 2020-10-18.md
qrcode/: QRCodes.xcf
server/: BRAINSTORM.md
server/api/: .gitignore  Cargo.toml
server/api/data/: Mindless.sql  create_user.json  delete_user.json  drop.sql  mark_gym.json  reset_database.sh  schema.sql  unmark_gym.json
server/api/scripts/: generate_json_request.py
server/api/src/: database.rs  error.rs  main.rs  routes.rs  task.rs  tests.rs  user.rs
server/database/: Cargo.toml
server/database/data/: mindless.sql
server/database/scripts/: cargo_wrap
server/database/src/: connection.rs  error.rs  instance.rs  lib.rs  task.rs  user.rs
server/database/tests/: user_tests.rs
server/endpoint/: .gitignore  Cargo.toml
server/endpoint/data/: drop.sql  schema.sql  test_data.sql
server/endpoint/src/: main.rs  routes.rs
server/scripts/: cargo_wrap
visualize/: google_calendar_output.py  weekly_data.db
