[package]
name = "endpoint"
version = "0.1.0"
authors = ["Justin Phu <justinqphu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.31"
chrono = "0.4"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "master"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "master"
default-features = false
features = ["json"]

[dependencies.tokio]
version = "0.2.22"

[dependencies.sqlx]
version = "0.3.5"
features = ["sqlite"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
