[package]
name = "endpoint"
version = "0.1.0"
authors = ["Justin Phu <justinqphu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.31"
chrono = "0.4"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "master"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "master"
default-features = false
features = ["json"]

[dependencies.tokio]
version = "0.2.22"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "^1.0.56"

[dependencies.database]
path = "../database"
