[package]
name = "database"
version = "0.1.0"
authors = ["Justin Phu <justinqphu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"

[dependencies.sqlx]
version = "0.4.0-beta.1"
features = ["sqlite"]

# Used to test our async functions.
[dev-dependencies.tokio]
version = "0.2.22"
features = ["macros", "rt-threaded"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
