[package]
name = "endpoint"
version = "0.1.0"
authors = ["Justin Phu <justinqphu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.31"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "async"

[dependencies.async-std]
version = "1.6.0"
features = ["attributes"]

[dependencies.sqlx]
version = "0.3.5"
features = ["sqlite"]
